maky my profile prettier

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <h2>CEO @OfTheWorld</h2>
 
         <p>
-          Dolore ad enim occaecat amet  Commodo dolor eiusmod quis exercitation dolor qui enim labore sunt:<strong> ad proident.</strong>.
+          Dolore ad enum occaecat amet  Commodo dolor eiusmod quis exercitation dolor qui enim labore sunt:<strong> ad proident.</strong>.
         </p>
 
         <a href="/" class="btn-red">See for yourself</a>
