--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <html>
   <head>
     <meta charset="utf-8">
@@ -9,20 +8,24 @@
   </head>
 
   <body>
-
     <div class="container">
-      <div class="card text-center">
-        <img src="images/me.jpg" alt="Houston Charles" id="img-profile" class="img-circle">
-        <h1>Houston Charles</h1>
-        <h2>CEO @OfTheWorld</h2>
 
-        <p>
-          Dolore ad enum occaecat amet  Commodo dolor eiusmod quis exercitation dolor qui enim labore sunt:<strong> ad proident.</strong>.
-        </p>
-
-        <a href="/" class="btn-red">See for yourself</a>
-
+      <div class="profile-header-wrapper">
+        <div class="profile-header-container">
+          <div class="profile-header-infos">
+            <img src="images/me.jpg" alt="Houston Charles">
+            <div class="profile-header-username">
+              <h1>Houston Charles</h1>
+              <h2>CEO @OfTheWorld</h2>
+              <p>
+                Dolore ad enum occaecat amet  Commodo dolor eiusmod quis exercitation dolor qui enim labore sunt:<strong> ad proident.</strong>.
+              </p>
+              <a href="/" class="btn-red">See for yourself</a>
+            </div>
+          </div>
+        </div>
       </div>
+
       <div class="card text-center">
         <ul class="list-inline">
           <li class="text-center">
@@ -99,6 +102,7 @@
          </li>
         </ul>
       </div>
+
     </div>
   </body>
 </html>
